--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -74,34 +74,34 @@ body {
 }
 
 .bg-blue {
-    background-color: $blue;
+    background-color: $blue !important;
 }
 .bg-indigo {
-    background-color: $indigo;
+    background-color: $indigo !important;
 }
 .bg-purple {
-    background-color: $purple;
+    background-color: $purple !important;
 }
 .bg-pink {
-    background-color: $pink;
+    background-color: $pink !important;
 }
 .bg-red {
-    background-color: $red;
+    background-color: $red !important;
 }
 .bg-orange {
-    background-color: $orange;
+    background-color: $orange !important;
 }
 .bg-yellow {
-    background-color: $yellow;
+    background-color: $yellow !important;
 }
 .bg-green {
-    background-color: $green;
+    background-color: $green !important;
 }
 .bg-teal {
-    background-color: $teal;
+    background-color: $teal !important;
 }
 .bg-cyan {
-    background-color: $cyan;
+    background-color: $cyan !important;
 }
 
 .el-table th {
