--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -100,6 +100,14 @@ body {
     color: #fff;
 }
 
+.text-red {
+    color: $red;
+}
+
+.text-green {
+    color: $green;
+}
+
 .table {
     width: 100%;
     border-top: 2px solid #ddd;
@@ -108,4 +116,8 @@ body {
 .table th, .table td {
     padding: 10px;
     border-bottom: 1px solid #ddd;
+}
+
+.el-table .inactive-row {
+    background: #ffeff0;
 }
