--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,3 +30,7 @@ body {
 .el-table {
     border-top: 1px solid #eee;
 }
+
+.el-tree-node__content>.el-checkbox{
+  margin-right: 8px !important;
+}
