--- a/frontend/assets/app.css
+++ b/frontend/assets/app.css
@@ -174,6 +174,10 @@ table {
   flex-direction: column;
 }
 
+.ml-3 {
+  margin-left: 15px;
+}
+
 .mr-2 {
   margin-right: 10px;
 }
@@ -195,7 +199,11 @@ table {
 }
 
 .p-2 {
-  padding: 2px;
+  padding: 10px;
+}
+
+.p-3 {
+  padding: 15px;
 }
 
 .text-lg {
@@ -203,9 +211,86 @@ table {
 }
 
 .text-xl {
+  font-size: 2em;
+}
+
+.text-2xl {
+  font-size: 2em;
+}
+
+.text-5xl {
   font-size: 2.5em;
+}
+
+.text-purple-700 {
+  color: purple;
+}
+
+.text-blue-700 {
+  color: blue;
+}
+
+.text-orange-700 {
+  color: orange;
 }
 
 .border {
   border: 1px solid #ddd;
 }
+
+/* backgrounds */
+
+.bg-orange-600 {
+  background-color: orange;
+}
+
+.bg-red-300 {
+  background-color: red;
+}
+
+.bg-red-700 {
+  background-color: red;
+}
+
+.bg-green-300 {
+  background-color: green;
+}
+
+.bg-purple-600 {
+  background-color: purple;
+}
+
+.bg-blue-600 {
+  background-color: blue;
+}
+
+.bg-green-600 {
+  background-color: green;
+}
+
+.bg-gray-200 {
+  background-color: #ccc;
+}
+
+.rounded-md {
+  border-radius: 4px;
+}
+
+.min-w-full {
+  min-width: 100%;
+}
+
+.border-b {
+  border-bottom: 1px solid #ddd;
+}
+
+.px-3 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.py-1 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
