--- a/nuxt3-fe/assets/app.css
+++ b/nuxt3-fe/assets/app.css
@@ -320,6 +320,10 @@ table {
   justify-content: center;
 }
 
+.justify-content-end {
+    justify-content: flex-end;
+}
+
 .align-items-center {
   align-items: center;
 }
